tests/compile-fail/integration__integration__difficulty__diff_switch_in_non_ecl.snap
---
source: tests/integration/difficulty.rs
expression: stderr
---
error: difficulty is not supported in this format
   ┌─ <input>:29:13
   │
29 │     int x = (1:2:3:4);
   │             ^^^^^^^^^ difficulty switch


